Adding manual route mapping

--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -17,3 +17,6 @@ spring:
         locator:
           enabled: true
           lowerCaseServiceId: true
+      routes:
+        - id: licensing-service
+          uri: lb://licensing-service
